name:                LearningSnap
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LearningSnap#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False


Executable LearningSnap
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends:       base
                     , MonadCatchIO-transformers >= 0.3 && < 0.4
                     , bytestring >= 0.10.6.0
                     , configurator
                     , haskell-docs              >=4.2.6
                     , heist
                     , lens >= 4.13.2.1
                     , mtl                       >= 2     && < 3
                     , restful-snap
                     , snap                      >=0.13   && < 0.15
                     , snap-core                 >= 0.9   && < 0.10
                     , snap-extras >= 0.11.0.2
                     , snap-loader-static        >= 0.9   && < 0.10
                     , snap-server               >= 0.9   && < 0.10
                     , directory
                     , filepath
                     , text >= 1.2.2.1
                     , time >= 1.5.0.1
                     , map-syntax

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else

      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/chemouna/LearningSnap
